# stickynote

./: .gitignore  .pre-commit-config.yaml  README.md  prek.toml  pyproject.toml
.github/workflows/: pyright.yml  pytest.yml  release.yml  ruff.yml  ty.yml
docs/plans/: 2026-03-10-replay-context-manager-design.md  2026-03-10-replay-context-manager.md  2026-03-13-replay-v2-design.md  2026-03-13-replay-v2.md
stickynote/: __init__.py  backends.py  key_strategies.py  memoize.py  replay.py  replay_time.py  serializers.py  storage.py
stickynote/storage/: __init__.py  base.py  file.py  memory.py  redis.py
tests/: test_key_strategies.py  test_memoize.py  test_replay.py  test_serializers.py  test_storage.py
tests/test_storage/: test_file.py  test_memory.py  test_redis.py
