[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stickynote"
version = "0.1.0"
description = "Distributed function memoization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "exceptiongroup>=1.2.2",
    "pytest-watcher>=0.4.3",
    "typing-extensions>=4.13.1",
]

[project.optional-dependencies]
cloudpickle = ["cloudpickle>=3.1.1"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
