[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stickynote"
version = "0.1.0"
description = "Distributed function memoization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "exceptiongroup>=1.2.2",
    "typing-extensions>=4.13.1",
]

[project.optional-dependencies]
cloudpickle = ["cloudpickle>=3.1.1"]
redis = ["redis>=6.2.0"]

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-watcher>=0.4.3",
    "ruff>=0.11.4",
]

[tool.ruff.lint]
select = [
    "I",  # isort
]

[tool.ruff.lint.isort]
known-first-party = ["stickynote"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
